# slime

./: AGENTS.md  Cargo.toml  LICENSE  README.md  justfile
crates/ime-converter/: Cargo.toml  build.rs
crates/ime-converter/data/: README.md
crates/ime-converter/src/: lib.rs
crates/ime-core/src/: lib.rs  user_data.rs
crates/ime-core/tests/: golden.rs
crates/ime-ffi/src/: lib.rs
crates/ime-romaji/src/: lib.rs
crates/ime-tools/: Cargo.toml
crates/ime-tools/src/: main.rs  neural.rs
crates/slime-converter/: Cargo.toml
crates/slime-converter/benches/: allocations.rs  converter.rs
crates/slime-converter/data/: MOZC_DICTIONARY_LICENSE.txt
crates/slime-converter/src/: compact.rs  lib.rs
crates/slime-core/: Cargo.toml
crates/slime-core/benches/: engine.rs
crates/slime-core/data/: README.md  business.tsv  creative.tsv  technology.tsv
crates/slime-core/src/: domain_dictionaries.rs  english_reverse.rs  lib.rs  session_history.rs  user_data.rs
crates/slime-core/tests/: golden.rs
crates/slime-ffi/: Cargo.toml
crates/slime-ffi/include/: slime_ffi.h
crates/slime-ffi/src/: lib.rs
crates/slime-ffi/tests/: ffi_smoke.c
crates/slime-romaji/: Cargo.toml
crates/slime-romaji/benches/: romaji.rs
crates/slime-romaji/src/: lib.rs
crates/slime-tools/: Cargo.toml
crates/slime-tools/src/: devset.rs  main.rs  neural.rs
docs/: benchmarking.md  dictionary-personalization-and-migration.md  evaluation.md  ime-research-and-direction.md
scripts/: benchmark-macos-adapter.sh  build-devset.sh  build-macos.sh  evaluate-ajimee.sh  evaluate-dev.sh  fetch-neural-model.sh  install-macos-system.sh  install-macos.sh  select-macos-input-source.sh  test-c-ffi.sh  test-macos-adapter.sh  update-mozc-basic-dictionary.sh  verify-macos-bundle.sh
