[package]
name = "ime-converter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fst = "0.4"

[build-dependencies]
fst = "0.4"

[lints]
workspace = true

[[bench]]
name = "converter"
harness = false

