[package]
name = "ime-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ime-converter = { path = "../ime-converter" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
llama-cpp-2 = { version = "0.1.151", optional = true }

[features]
# Neural N-best rescoring experiments (Phase 2). Requires cmake to build
# llama.cpp; keep optional so default builds stay pure Rust.
neural = ["dep:llama-cpp-2"]

[lints]
workspace = true

[[bin]]
name = "ime-evaluate"
path = "src/main.rs"

[[bin]]
name = "ime-devset"
path = "src/devset.rs"
